
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rustia"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "3.0.0", features = ["serde-json"]}
napi-derive = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
