
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rustia"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3.32"
http = "1.4.0"
napi = {version = "3.0.0", features = ["serde-json"]}
napi-derive = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["full"]}
tokio-tungstenite = "0.28.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
